0.11	- 2025-05-04, H.Merijn Brand
    * Fix documentation
    * Run has_no_cves on in author mode
    * Make want uniq

0.10	- 2025-05-02, H.Merijn Brand
    * has_no_cves (issue#4)
    * fix issue tracker (garu PR#5)

0.09	- 2025-03-17, H.Merijn Brand
    * Allow ',' in cpanfile (Christian Damen)
    * Skip comments in VERSION analysis
    * Fixed bugtracker URL
    * It is 2025
    * Add SECURITY.md
    * Support for CVE.SKIP and other ways to ignore CVE's

0.08	- 2024-05-27, H.Merijn Brand
    * Parse META.yml and/or MYMETA.yml id other resources are missing
    * Fix test on "=1.74" condition

0.07	- 2024-04-28, H.Merijn Brand
    * Use Module::CoreList to up unspecified minimum for core modules

0.06	- 2024-04-27, H.Merijn Brand
    * Do not die on missing Makefile.PL

0.05	- 2024-04-10, H.Merijn Brand
    * Remove unused requirement causing failure if not available

0.04	- 2024-04-08, H.Merijn Brand
    * Strip WARNING if it prefixes the JSON data
    * Opt to install cpan-cve.pl (issue#1)
    * Pass verbosity from script to parser
    * Fix version chain compare with multiple versions
    * Suppress perl-core CVE's by default in cpan-cve.pl
    * Cowardly give up if no NAME or DISTNAME found
    * Allow multiple folders collected in JSON output
    * It is 2024
    * Update dependencies

0.03	- 2023-11-27, H.Merijn Brand
    * Add ->want & ->set_meta
    * Support test on a single script in cpan-cve.pl
    * Use toolchain-gang URL
    * Test for cpanfile
    * Added INCENTIVE
    * Release

0.02	- 2023-06-27, H.Merijn Brand
    * Tranfered authority to CPAN-Security

0.01	- 2023-05-05, H.Merijn Brand
    * Initial release