@@ -1,6 +1,7 @@
 0.11	- 2025-05-04, H.Merijn Brand
     * Fix documentation
-    * Run has_no_cves on in author mode
+    * Run has_no_cves only in author mode and advice against using it
+      in standard test suites
     * Make want uniq
 
 0.10	- 2025-05-02, H.Merijn Brand
